service page done contact page started

--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -2,3 +2,6 @@
 @forward "../layout/responsive";
 @forward "../layout/main";
 @forward "../layout/footer";
+@forward "../layout/nav";
+@forward "../layout/service";
+@forward "../layout/contact";
