--- a/sass/layout/_responsive.scss
+++ b/sass/layout/_responsive.scss
@@ -2,6 +2,9 @@
 @use "./header";
 @use "./main";
 @use "./footer";
+@use "./nav";
+@use "./service";
+@use "./contact";
 
 @include media-md {
   .mobile-menu-btn {
@@ -146,6 +149,19 @@
       }
     }
   }
+
+  /*service.html*/
+  #service-cont {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 28px 28px;
+
+    .s-desc {
+      h1 {
+        margin-bottom: 1vw;
+      }
+    }
+  }
 }
 
 @include media-lg {
@@ -182,6 +198,8 @@
     .service-icon {
       h1 {
         margin-left: 1vw;
+        font-size: 19px;
+        margin-top: 0.5vw;
       }
     }
     .service-list {
@@ -210,6 +228,8 @@
       h1 {
         margin-left: 1vw;
         text-transform: uppercase;
+        font-size: 19px;
+        margin-top: 0.5vw;
       }
     }
     .choose-list {
@@ -321,6 +341,39 @@
           h3 {
             font-size: 14px;
           }
+        }
+      }
+    }
+  }
+
+  /*service.html*/
+  .s-heading {
+    font-size: 26px;
+  }
+  #s-foot {
+    position: relative;
+    top: 70vw;
+  }
+  #service-cont {
+    gap: 28px 35px;
+    max-width: 800px;
+    position: absolute;
+    right: 24vw;
+    .s-desc {
+      h1 {
+        font-size: 22px;
+      }
+      p {
+        font-size: 16px;
+      }
+      .s-btn {
+        margin-top: 1vw;
+        padding: 7px 14px;
+        font-size: 12px;
+        &:hover {
+          background-color: #0d4882;
+          color: white;
+          border: none;
         }
       }
     }
