--- a/sass/layout/_responsive.scss
+++ b/sass/layout/_responsive.scss
@@ -5,7 +5,7 @@
 @use "./nav";
 @use "./service";
 @use "./contact";
-
+@use "./job";
 @include media-md {
   .mobile-menu-btn {
     display: none;
@@ -174,6 +174,18 @@
       h2 {
         font-size: 16px;
       }
+    }
+  }
+
+  /*job.html*/
+  #job-desc {
+    flex-direction: row;
+
+    .j-img {
+      width: 131vw;
+    }
+    .j-info {
+      margin-left: 3vw;
     }
   }
 }
@@ -410,6 +422,24 @@
       width: 21vw;
       h2 {
         font-size: 19px;
+      }
+    }
+  }
+
+  /*contact.html*/
+  .j-heading {
+    font-size: 24px;
+  }
+  #job-desc {
+    .j-info {
+      h1 {
+        font-size: 20px;
+      }
+      p {
+        font-size: 16px;
+      }
+      h3 {
+        font-size: 14px;
       }
     }
   }
