vite upload test

--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -1,8 +1,8 @@
-@forward "../layout/header";
-@forward "../layout/responsive";
-@forward "../layout/main";
-@forward "../layout/footer";
-@forward "../layout/nav";
-@forward "../layout/service";
-@forward "../layout/contact";
-@forward "../layout/job";
+@forward "header";
+@forward "responsive";
+@forward "main";
+@forward "footer";
+@forward "nav";
+@forward "service";
+@forward "contact";
+@forward "job";
