--- a/sass/base/_index.scss
+++ b/sass/base/_index.scss
@@ -1,4 +1,4 @@
-@forward "../base/color";
-@forward "../base/effects";
-@forward "../base/font";
-@forward "../base/mediaquery";
+@forward "color";
+@forward "effects";
+@forward "font";
+@forward "mediaquery";
