final changes again

--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -88,3 +88,39 @@ main {
   margin-top: 20px;
   width: 100%;
 }
+
+.form-submit-c {
+  position: absolute;
+  height: 89vw;
+  border-radius: 50%;
+  top: 97vw;
+  background-color: #0d4882;
+  margin: 5vw 6.5vw;
+  right: 0vw;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+
+  .c-info {
+    padding: 1vw;
+  }
+
+  .c-s {
+    padding: 5vw;
+
+    .c-d {
+      color: white;
+      font-family: $primary-font;
+      font-size: 12px;
+    }
+    .c-icon {
+      margin-bottom: 4vw;
+      display: flex;
+      justify-content: flex-end;
+      .close {
+        border: none;
+        width: 8vw;
+      }
+    }
+  }
+}
