--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -12,6 +12,12 @@
     font-weight: bold;
     font-size: 28px;
   }
+  h3 {
+    font-family: $primary-font;
+    color: $text-color;
+    font-weight: bold;
+    font-size: 28px;
+  }
 
   p {
     font-family: $secondary-font;
